tests/testFiles/semanticErrors/addboolandnum.meme
ermahgerd a = 5 + true;
